src/test/ui/macros/macro-path-prelude-fail-1.stderr
error[E0433]: failed to resolve: not a module `Vec`
  --> $DIR/macro-path-prelude-fail-1.rs:5:9
   |
LL |         Vec::clone!();
   |         ^^^ not a module `Vec`

error[E0433]: failed to resolve: not a module `u8`
  --> $DIR/macro-path-prelude-fail-1.rs:6:9
   |
LL |         u8::clone!();
   |         ^^ not a module `u8`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
