src/test/ui/macros/macro-path-prelude-fail-1.rs
#![feature(extern_prelude)]

mod m {
    fn check() {
        Vec::clone!(); //~ ERROR failed to resolve: not a module `Vec`
        u8::clone!(); //~ ERROR failed to resolve: not a module `u8`
    }
}

fn main() {}
